fixed image overflow in about page.

--- a/styles/join.css
+++ b/styles/join.css
@@ -2,15 +2,10 @@ main {
   height: auto;
   color: aliceblue;
   max-width: 900px;
+  width: 100%;
   padding: 10px;
   font-size: larger;
 }
-
-/* input {
-  padding: 10px;
-  margin: 10px;
-  width: 250px;
-} */
 
 input,
 textarea {
@@ -30,15 +25,6 @@ textarea{
   max-width:500px;
   height:200px;
   display:block;
-  margin: 0 auto;
-}
-
-iframe {
-  background-color: rgba(136, 161, 182, 0.683);
-  border-radius: 10px;
-  max-width: 640px;
-  width: 100%;
-  height: 3700px;
   margin: 0 auto;
 }
 
@@ -94,6 +80,7 @@ p {
   border-radius: 10px;
   max-width: 660px;
   width: 100%;
+  height: auto;
   margin: 0 auto;
   border: 1px solid rgb(190, 188, 188);
   padding: 10px;
@@ -105,7 +92,8 @@ p {
   color: black;
   padding: 30px;
   border-radius: 5px;
-  width: 550px;
+  max-width: 550px;
+  width: 100%;
   height: auto;
   margin: 10px auto;
   text-align: left;
